# Agri-Trace

AgriConnect/: app.py  auth.py  database.py  pyproject.toml  replit.md  utils.py
AgriConnect/attached_assets/: Pasted-1-General-Requirements-Responsive-design-mobile-desktop-Role-based-dashboards-Farmer-Distr-1757891111292_1757891111293.txt  Pasted-You-are-an-AI-backend-builder-I-want-you-to-create-a-RESTful-backend-service-for-my-project-called--1757891130583_1757891130583.txt
AgriConnect/components/: charts.py  navigation.py  qr_generator.py
AgriConnect/pages/: __init__.py  admin_dashboard.py  buyer_dashboard.py  distributor_dashboard.py  farmer_dashboard.py  retailer_dashboard.py
